--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -58,6 +58,11 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-sleuth-zipkin</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>net.logstash.logback</groupId>
+			<artifactId>logstash-logback-encoder</artifactId>
+			<version>7.3</version>
+		</dependency>
 	</dependencies>
 	
 	<dependencyManagement>
