--- a/favourite-service/pom.xml
+++ b/favourite-service/pom.xml
@@ -73,6 +73,11 @@
 			<artifactId>mysql</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>net.logstash.logback</groupId>
+			<artifactId>logstash-logback-encoder</artifactId>
+			<version>7.3</version>
+		</dependency>
 	</dependencies>
 	
 	<dependencyManagement>
