--- a/proxy-client/pom.xml
+++ b/proxy-client/pom.xml
@@ -88,6 +88,11 @@
 			<groupId>io.github.resilience4j</groupId>
 			<artifactId>resilience4j-bulkhead</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>net.logstash.logback</groupId>
+			<artifactId>logstash-logback-encoder</artifactId>
+			<version>7.3</version>
+		</dependency>
 	</dependencies>
 	
 	<dependencyManagement>
