--- a/k8s/order-service.yaml
+++ b/k8s/order-service.yaml
@@ -16,8 +16,8 @@ spec:
     spec:
       containers:
       - name: order-service
-        image: order-service:v0.1.0
-        imagePullPolicy: Never
+        image: ecommercestageacr.azurecr.io/order-service:v1.0.0
+        imagePullPolicy: Always
         ports:
         - containerPort: 8300
         resources:
