--- a/k8s/product-service.yaml
+++ b/k8s/product-service.yaml
@@ -16,8 +16,8 @@ spec:
     spec:
       containers:
       - name: product-service
-        image: product-service:v0.1.0
-        imagePullPolicy: Never
+        image: ecommercestageacr.azurecr.io/product-service:v1.0.0
+        imagePullPolicy: Always
         ports:
         - containerPort: 8500
         resources:
